--- a/index.html
+++ b/index.html
@@ -1,80 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>Rizwan N Portfolio</title>
-<style>
-body {font-family: Arial; margin:0; background:#0f172a; color:white;}
-section {padding:60px 20px; max-width:900px; margin:auto;}
-h1,h2 {color:#38bdf8;}
-.card {background:#1e293b; padding:20px; margin:15px 0; border-radius:12px;}
-button,a.btn {
-display:inline-block;
-padding:12px 18px;
-background:#38bdf8;
-color:black;
-text-decoration:none;
-border-radius:8px;
-margin:8px 0;
-}
-</style>
+<link rel="stylesheet" href="style.css">
+<script defer src="script.js"></script>
 </head>
 
 <body>
 
-<section>
-<h1>Rizwan N — Associate Software Engineer</h1>
-<p>Full Stack Developer • Automation Builder • Problem Solver</p>
-<a class="btn" href="https://github.com/RizwanB312">View GitHub</a>
-</section>
+<nav>
+  <h2>Rizwan N Portfolio</h2>
+  <div>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#exp">Experience</a>
+    <a href="#projects">Projects</a>
+    <a href="#resume">Resume</a>
+    <a href="#cert">Cert</a>
+  </div>
+</nav>
 
-<section>
+<header>
+  <h1>Rizwan N</h1>
+  <p>Associate Software Engineer • Full Stack Developer • Automation Builder</p>
+  <a class="btn" href="https://github.com/RizwanB312" target="_blank">View GitHub</a>
+</header>
+
+<section id="about">
 <h2>About Me</h2>
 <div class="card">
-B.Tech graduate, CGPA 8.78, college topper. Associate Software Engineer and Full Stack Developer with experience in web development, automation, and SEO analytics. I build practical tools and continuously improve with projects and certifications.
+B.Tech graduate (CGPA 8.78 — College Topper). Associate Software Engineer and Full Stack Developer with experience in web development, automation tools, and SEO analytics. I build practical systems and continuously improve through projects and certifications.
 </div>
 </section>
 
-<section>
+<section id="skills">
+<h2>Skills</h2>
+<div class="grid">
+<div class="card">Python</div>
+<div class="card">Java</div>
+<div class="card">C</div>
+<div class="card">JavaScript</div>
+<div class="card">HTML/CSS</div>
+<div class="card">Automation</div>
+<div class="card">Web Scraping</div>
+<div class="card">SEO Analytics</div>
+</div>
+</section>
+
+<section id="exp">
 <h2>Experience</h2>
-<div class="card">
-<b>Web Developer Intern — Cyberfox Solutions</b><br>
-Aug 2024 – Feb 2025
+
+<div class="card toggle">
+<h3>Web Developer Intern — Cyberfox Solutions</h3>
+<p>Aug 2024 – Feb 2025</p>
+<div class="hidden">
+Worked on frontend features, web modules, and internal tools.
 </div>
-<div class="card">
-<b>SEO Executive — Cyberfox Solutions</b><br>
-Nov 2025 – Present
 </div>
-</section>
 
-<section>
-<h2>Education</h2>
-<div class="card">
-B.Tech — College of Engineering and Management, Punnapra<br>
-CGPA: 8.78 — College Topper
+<div class="card toggle">
+<h3>SEO Executive — Cyberfox Solutions</h3>
+<p>Nov 2025 – Present</p>
+<div class="hidden">
+SEO operations, analytics, optimization, technical improvements.
 </div>
+</div>
+
 </section>
 
-<section>
-<h2>Resumes</h2>
-<a class="btn" href="RAW_RESUME1_LINK">Download Associate Engineer Resume</a><br>
-<a class="btn" href="RAW_RESUME2_LINK">Download Full Stack Resume</a>
-</section>
-
-<section>
-<h2>Certification</h2>
-<a class="btn" href="RAW_CERT_LINK">View BE10X Certificate</a>
-</section>
-
-<section>
+<section id="projects">
 <h2>Projects</h2>
+
 <div class="card">
-Naukri Job Scraper — automation job apply tool
+<h3>Naukri Job Scraper</h3>
+<p>Automation tool that auto-applies within platform.</p>
 </div>
+
 <div class="card">
-Indeed Automation Tool — in progress
+<h3>Indeed Automation Tool</h3>
+<p>Automation system in progress.</p>
 </div>
+
 </section>
+
+<section id="resume">
+<h2>Resume</h2>
+
+<a class="btn block"
+href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf"
+target="_blank">
+Associate Software Engineer Resume
+</a>
+
+<a class="btn block"
+href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf"
+target="_blank">
+Full Stack Developer Resume
+</a>
+
+</section>
+
+<section id="cert">
+<h2>Certification</h2>
+
+<a class="btn block"
+href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf"
+target="_blank">
+View BE10X Certificate
+</a>
+
+</section>
+
+<footer>
+© Rizwan N — Portfolio
+</footer>
 
 </body>
 </html>
