--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <a href="#projects">Projects</a>
     <a href="#resume">Resume</a>
     <a href="#cert">Cert</a>
+    <a href="#contact">Contact</a>
   </div>
 </nav>
 
 <header>
+  <img class="profile" src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg">
   <h1>Rizwan N</h1>
   <p>Associate Software Engineer • Full Stack Developer • Automation Builder</p>
   <a class="btn" href="https://github.com/RizwanB312" target="_blank">View GitHub</a>
@@ -30,21 +32,35 @@
 <section id="about">
 <h2>About Me</h2>
 <div class="card">
-B.Tech graduate (CGPA 8.78 — College Topper). Associate Software Engineer and Full Stack Developer with experience in web development, automation tools, and SEO analytics. I build practical systems and continuously improve through projects and certifications.
+I am an Associate Software Engineer and Full Stack Developer with strong foundations in programming, automation, and web systems. I graduated B.Tech with a CGPA of 8.78 as a college topper. I specialize in building practical tools, automation workflows, and web applications that solve real-world problems. I continuously grow through certifications, hands-on projects, and deep technical practice in DSA and system design. My focus is performance, clean architecture, and scalable solutions.
 </div>
 </section>
 
 <section id="skills">
 <h2>Skills</h2>
+
 <div class="grid">
-<div class="card">Python</div>
-<div class="card">Java</div>
-<div class="card">C</div>
-<div class="card">JavaScript</div>
-<div class="card">HTML/CSS</div>
-<div class="card">Automation</div>
-<div class="card">Web Scraping</div>
-<div class="card">SEO Analytics</div>
+
+<div class="card">
+<h3>Languages</h3>
+C<br>Python<br>Java<br>JavaScript
+</div>
+
+<div class="card">
+<h3>Web Technologies</h3>
+HTML<br>CSS<br>JavaScript<br>Full Stack Development
+</div>
+
+<div class="card">
+<h3>Databases</h3>
+SQL Basics<br>Data Handling Concepts
+</div>
+
+<div class="card">
+<h3>Additional Skills</h3>
+Automation Scripting<br>Web Scraping<br>SEO Analytics<br>Git & Version Control<br>Problem Solving
+</div>
+
 </div>
 </section>
 
@@ -53,17 +69,21 @@ B.Tech graduate (CGPA 8.78 — College Topper). Associate Software Engineer and 
 
 <div class="card toggle">
 <h3>Web Developer Intern — Cyberfox Solutions</h3>
-<p>Aug 2024 – Feb 2025</p>
 <div class="hidden">
-Worked on frontend features, web modules, and internal tools.
+• Built and improved frontend components<br>
+• Worked on internal web tools<br>
+• Optimized UI behavior and performance<br>
+• Assisted in feature implementation and testing
 </div>
 </div>
 
 <div class="card toggle">
-<h3>SEO Executive — Cyberfox Solutions</h3>
-<p>Nov 2025 – Present</p>
+<h3>SEO Executive (Part-Time) — Cyberfox Solutions</h3>
 <div class="hidden">
-SEO operations, analytics, optimization, technical improvements.
+• SEO analytics and optimization work<br>
+• Technical SEO improvements<br>
+• Performance tracking and reporting<br>
+• Content and ranking optimization support
 </div>
 </div>
 
@@ -74,12 +94,14 @@ SEO operations, analytics, optimization, technical improvements.
 
 <div class="card">
 <h3>Naukri Job Scraper</h3>
-<p>Automation tool that auto-applies within platform.</p>
+Automation system that automatically applies to jobs within platform while skipping external links.<br><br>
+<b>Tech:</b> Python, Automation Scripts, Web Parsing
 </div>
 
 <div class="card">
-<h3>Indeed Automation Tool</h3>
-<p>Automation system in progress.</p>
+<h3>Indeed Automation Tool (In Progress)</h3>
+Automation framework for structured job applications and filtering.<br><br>
+<b>Tech:</b> Python, Workflow Automation
 </div>
 
 </section>
@@ -109,6 +131,17 @@ href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCer
 target="_blank">
 View BE10X Certificate
 </a>
+
+</section>
+
+<section id="contact">
+<h2>Contact</h2>
+
+<div class="card">
+GitHub: https://github.com/RizwanB312<br>
+Role: Associate Software Engineer / Full Stack Developer<br>
+Open to Software & Automation roles
+</div>
 
 </section>
 
