--- a/index.html
+++ b/index.html
@@ -1,141 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Rizwan N — Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Rizwan N Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<style>
+body {
+  font-family: "Segoe UI", Arial, sans-serif;
+  margin: 0;
+  background: #f8fafc;
+  color: #111827;
+}
+
+/* HERO */
+.hero {
+  text-align: center;
+  padding: 50px 20px;
+  background: linear-gradient(120deg,#0ea5e9,#22c55e,#6366f1);
+  color: white;
+}
+
+.profile {
+  width: 140px;
+  height: 140px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 5px solid white;
+  margin-bottom: 15px;
+}
+
+.hero h1 {
+  margin: 10px 0 5px;
+  font-size: 34px;
+}
+
+.hero p {
+  font-size: 18px;
+  opacity: 0.95;
+}
+
+/* SECTION HEADERS */
+h2 {
+  cursor: pointer;
+  background: white;
+  padding: 16px;
+  margin: 24px auto 10px;
+  border-radius: 12px;
+  max-width: 1000px;
+  box-shadow: 0 4px 14px rgba(0,0,0,0.08);
+}
+
+/* CONTENT */
+.content {
+  display: none;
+  max-width: 1000px;
+  margin: auto;
+  padding: 10px 20px 30px;
+}
+
+/* ABOUT TEXT BIGGER */
+.about-text {
+  font-size: 18px;
+  line-height: 1.7;
+}
+
+/* MAIN CARD (outer block) */
+.main-card {
+  background: white;
+  border-radius: 16px;
+  padding: 20px;
+  margin: 16px 0;
+  box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+  border-left: 6px solid #22c55e;
+}
+
+/* INNER BUBBLES */
+.bubble {
+  display: inline-block;
+  background: linear-gradient(120deg,#e0f2fe,#dcfce7);
+  padding: 8px 14px;
+  margin: 6px;
+  border-radius: 20px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+/* CARD BLOCKS */
+.card {
+  background: white;
+  padding: 18px;
+  margin: 14px 0;
+  border-radius: 14px;
+  box-shadow: 0 5px 16px rgba(0,0,0,0.08);
+  border-top: 4px solid #0ea5e9;
+}
+
+/* BUTTONS */
+.buttons a {
+  display: inline-block;
+  margin: 8px;
+  padding: 10px 16px;
+  background: white;
+  color: #111827;
+  text-decoration: none;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+.buttons a:hover {
+  background: #e5e7eb;
+}
+</style>
 </head>
 
 <body>
 
-<header class="hero">
-  <img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg" class="profile">
-  <h1>Rizwan N</h1>
-  <h2>Associate Software Engineer • Full Stack Developer</h2>
+<!-- HERO -->
+<section class="hero">
+<img src="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/RICHU.jpg" class="profile">
+<h1>Rizwan N Portfolio</h1>
+<p>Associate Software Engineer • Full Stack Developer • AI Builder</p>
 
-  <div class="buttons">
-    <a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf" target="_blank">Resume — ASE</a>
-    <a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf" target="_blank">Resume — Full Stack</a>
-    <a href="https://github.com/RizwanB312" target="_blank">GitHub</a>
-    <a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf" target="_blank">BE10X Certificate</a>
-  </div>
-</header>
-
-<section>
-  <h2 onclick="toggle(this)">About Me</h2>
-  <div class="content">
-    <p>
-      B.Tech graduate and college topper with strong foundations in software engineering,
-      full-stack development, and automation. I build real-world tools — including job
-      application automation systems — and focus on writing clean, efficient, production-ready code.
-      Experienced in web technologies, backend logic, databases, and scripting automation.
-      Passionate about scalable systems, performance, and continuous upskilling through
-      certifications and project work.
-    </p>
-  </div>
+<div class="buttons">
+<a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Associate%20Software%20Engineer.pdf" target="_blank">Associate Resume</a>
+<a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Rizwan-N-Full%20Stack%20Developer.pdf" target="_blank">Full Stack Resume</a>
+<a href="https://raw.githubusercontent.com/RizwanB312/portfolio-files/main/Be10xCertificate.pdf" target="_blank">BE10X Certificate</a>
+</div>
 </section>
 
+<!-- ABOUT -->
 <section>
-  <h2 onclick="toggle(this)">Skills</h2>
-  <div class="content">
-
-    <h3>Languages</h3>
-    <div class="bubbles">
-      <span>Python</span><span>C</span><span>Java</span><span>JavaScript</span>
-    </div>
-
-    <h3>Web</h3>
-    <div class="bubbles">
-      <span>HTML</span><span>CSS</span><span>React Basics</span>
-    </div>
-
-    <h3>Databases</h3>
-    <div class="bubbles">
-      <span>MySQL</span><span>SQL</span>
-    </div>
-
-    <h3>Additional</h3>
-    <div class="bubbles">
-      <span>Automation</span><span>SEO</span><span>ETL Testing</span>
-      <span>Git</span><span>API Usage</span>
-    </div>
-
-  </div>
+<h2 onclick="toggle(this)">About Me</h2>
+<div class="content">
+<p class="about-text">
+B.Tech Computer Science graduate and college topper with strong foundations in
+software engineering, automation systems, and full-stack development.
+I design and build real-world technical solutions including AI tools,
+automation frameworks, intelligent chat systems, and developer utilities.
+My work focuses on clean logic, scalable architecture, and production-ready
+implementation. I continuously expand my technical stack through certifications,
+projects, and applied engineering practice.
+</p>
+</div>
 </section>
 
+<!-- SKILLS -->
 <section>
-  <h2 onclick="toggle(this)">Experience</h2>
-  <div class="content">
+<h2 onclick="toggle(this)">Skills</h2>
+<div class="content">
 
-    <div class="card">
-      <h3>SEO Executive — Part Time</h3>
-      <p>Cyberfox Solutions (Nov 2025 — Present)</p>
-      <ul>
-        <li>Keyword strategy & technical SEO optimization</li>
-        <li>On-page & performance improvements</li>
-        <li>Analytics tracking & ranking improvements</li>
-        <li>Tools: SEO tools, analytics platforms</li>
-      </ul>
-    </div>
+<div class="main-card">
+<h3>Languages</h3>
+<span class="bubble">Python</span>
+<span class="bubble">C</span>
+<span class="bubble">Java</span>
+<span class="bubble">JavaScript</span>
+</div>
 
-    <div class="card">
-      <h3>Web Developer Intern</h3>
-      <p>Cyberfox Solutions (Aug 2024 — Feb 2025)</p>
-      <ul>
-        <li>Built responsive web pages</li>
-        <li>Frontend + backend integration</li>
-        <li>UI fixes & performance tuning</li>
-        <li>Tech: HTML, CSS, JS, backend APIs</li>
-      </ul>
-    </div>
+<div class="main-card">
+<h3>Web Technologies</h3>
+<span class="bubble">HTML</span>
+<span class="bubble">CSS</span>
+<span class="bubble">Full Stack Development</span>
+</div>
 
-  </div>
+<div class="main-card">
+<h3>Databases</h3>
+<span class="bubble">SQL Basics</span>
+<span class="bubble">Data Handling</span>
+</div>
+
+<div class="main-card">
+<h3>Additional Skills</h3>
+<span class="bubble">Automation</span>
+<span class="bubble">Web Scraping</span>
+<span class="bubble">SEO Analytics</span>
+<span class="bubble">Git</span>
+<span class="bubble">Problem Solving</span>
+</div>
+
+</div>
 </section>
 
+<!-- EXPERIENCE -->
 <section>
-  <h2 onclick="toggle(this)">Projects</h2>
-  <div class="content">
+<h2 onclick="toggle(this)">Experience</h2>
+<div class="content">
 
-    <div class="card">
-      <h3>Naukri Auto Apply Bot</h3>
-      <p>
-        Automated job application system that applies to internal listings
-        and skips external redirects intelligently.
-      </p>
-      <p><b>Tech:</b> Python, Automation, Web Parsing</p>
-    </div>
+<div class="card">
+<h3>SEO Executive — Cyberfox Solutions</h3>
+<ul>
+<li>Performed technical SEO audits and optimization</li>
+<li>Improved keyword rankings and search visibility</li>
+<li>Handled analytics tracking and performance monitoring</li>
+<li>Worked on structured metadata and content tuning</li>
+</ul>
+</div>
 
-    <div class="card">
-      <h3>Portfolio Website</h3>
-      <p>
-        Dynamic GitHub Pages portfolio with interactive UI,
-        resume hosting, certification display, and expandable sections.
-      </p>
-      <p><b>Tech:</b> HTML, CSS, JavaScript</p>
-    </div>
+<div class="card">
+<h3>Web Developer Intern — Cyberfox Solutions</h3>
+<ul>
+<li>Built responsive frontend components</li>
+<li>Integrated backend APIs with UI workflows</li>
+<li>Optimized performance and layout behavior</li>
+<li>Worked with HTML, CSS, JavaScript stacks</li>
+</ul>
+</div>
 
-  </div>
+</div>
 </section>
 
+<!-- PROJECTS -->
 <section>
-  <h2 onclick="toggle(this)">Education</h2>
-  <div class="content">
-    <div class="card">
-      <h3>B.Tech — Computer Science</h3>
-      <p>CGPA: 8.78 — College Topper</p>
-    </div>
-  </div>
+<h2 onclick="toggle(this)">Projects</h2>
+<div class="content">
+
+<div class="card">
+<h3>AI Chatbot System</h3>
+<p>
+Context-aware conversational AI chatbot capable of dynamic
+response handling and multi-query interaction.
+</p>
+<p><b>Technologies:</b> Python, AI APIs, NLP Logic</p>
+</div>
+
+<div class="card">
+<h3>AI Virtual Mouse</h3>
+<p>
+Computer-vision based gesture control mouse using hand tracking
+for cursor movement and click detection.
+</p>
+<p><b>Technologies:</b> Python, OpenCV, Vision Models</p>
+</div>
+
+</div>
 </section>
 
+<!-- EDUCATION -->
 <section>
-  <h2 onclick="toggle(this)">Contact</h2>
-  <div class="content">
-    <p>📞 +91 7907075183</p>
-    <p>📧 rizwannowfal001@gmail.com</p>
-    <p>📍 Bangalore, India</p>
-  </div>
+<h2 onclick="toggle(this)">Education</h2>
+<div class="content">
+<div class="card">
+<h3>B.Tech — Computer Science & Engineering</h3>
+<p>CGPA: 8.78 — College Topper</p>
+</div>
+</div>
 </section>
 
-<script src="script.js"></script>
+<!-- CONTACT -->
+<section>
+<h2 onclick="toggle(this)">Contact</h2>
+<div class="content">
+<div class="card">
+<p>📞 +91 7907075183</p>
+<p>📧 rizwannowfal001@gmail.com</p>
+<p>📍 Bangalore, India</p>
+<p>💻 GitHub: https://github.com/RizwanB312</p>
+<p>🔗 LinkedIn: https://www.linkedin.com/in/rizwan-n-72955234a/</p>
+</div>
+</div>
+</section>
+
+<script>
+function toggle(el){
+  const c = el.nextElementSibling;
+  c.style.display = (c.style.display === "block") ? "none" : "block";
+}
+</script>
+
 </body>
 </html>
